move plan success logic to reusable workflow

--- a/.github/actions/admin/action.yml
+++ b/.github/actions/admin/action.yml
@@ -71,7 +71,7 @@ runs:
         gh pr checkout ${{ inputs.number }}
 
     - name: 'Setup Terraform'
-      uses: abcxyz/secure-setup-terraform@78e3f2fdfb7ebf59ce42141f6dd93bdd65bf04ed # ratchet:abcxyz/secure-setup-terraform@v0.2.5
+      uses: 'abcxyz/secure-setup-terraform@78e3f2fdfb7ebf59ce42141f6dd93bdd65bf04ed' # ratchet:abcxyz/secure-setup-terraform@v0.2.5
       with:
         terraform_version: '${{ inputs.terraform_version }}'
         terraform_module_location: './${{ inputs.working_directory }}'
