--- a/.github/actions/hide-plan-comments/action.yml
+++ b/.github/actions/hide-plan-comments/action.yml
@@ -20,7 +20,7 @@ runs:
   using: composite
   steps:
     - name: 'Hide Previous Plan Comments'
-      uses: actions/github-script@98814c53be79b1d30f795b907e553d8679345975 # ratchet:actions/github-script@v6
+      uses: 'actions/github-script@98814c53be79b1d30f795b907e553d8679345975' # ratchet:actions/github-script@v6
       with:
         github-token: '${{ github.token }}'
         retries: '${{ inputs.max_retries }}'
