--- a/.github/workflows/test-plan.yml
+++ b/.github/workflows/test-plan.yml
@@ -101,25 +101,13 @@ jobs:
 
   plan_success:
     if: ${{ always() }}
+    runs-on: 'ubuntu-latest'
     needs:
       - 'init'
       - 'plan'
-    runs-on: 'ubuntu-latest'
     steps:
-      - name: 'Success'
-        if: ${{ needs.init.result == 'success' && needs.plan.result == 'success' }}
-        run: |-
-          echo "All plans successful!"
-          exit 0
-
-      - name: 'Failure'
-        if: ${{ needs.init.result == 'failure' || needs.plan.result == 'failure' }}
-        run: |-
-          echo "::error ::Plan has one or more failures."
-          exit 1
-
-      - name: 'Indeterminate'
-        if: ${{ contains(fromJSON('["skipped", "cancelled"]'), needs.init.result) || contains(fromJSON('["skipped", "cancelled"]'), needs.plan.result) }}
-        run: |-
-          echo "::warning ::Init or Plan was skipped or cancelled."
-          exit 0
+      - name: 'Guardian Post Plan Status'
+        uses: './.github/actions/plan-status'
+        with:
+          init_result: '${{ needs.init.result }}'
+          plan_result: '${{ needs.plan.result }}'
