--- a/.github/actions/directories/action.yml
+++ b/.github/actions/directories/action.yml
@@ -52,6 +52,7 @@ runs:
 
         # Get all terraform file directores that contain a backend config
         BACKEND_DIRS=$(find $TERRAFORM_DIRECTORY -name "*.tf" | xargs grep -l 'backend ".*" {' | xargs dirname | sed 's|[\.?][/]*||g' | sort | uniq)
+        echo "BACKEND_DIRS=$BACKEND_DIRS"
 
         INPUT_DIRS="${{ inputs.directories }}"
 
@@ -60,18 +61,18 @@ runs:
           REQUESTED=$(echo "$INPUT_DIRS" | sed 's/,[[:space:]]*/\n/g' | sort | uniq)
 
           # Get the intersection of directories with backends and requested as an array
-          DIRS=$(comm -12 <(echo "$BACKEND_DIRS") <(echo "$REQUESTED") | jq -nRrc '[inputs|split("\n")] | flatten | tostring')
+          OUTPUT_DIRS=$(comm -12 <(echo "$BACKEND_DIRS") <(echo "$REQUESTED") | jq -nRrc '[inputs|split("\n")] | flatten | tostring')
 
-          echo "dirs=$DIRS"
-          echo "dirs=$DIRS" >> $GITHUB_OUTPUT
+          echo "dirs=$OUTPUT_DIRS"
+          echo "dirs=$OUTPUT_DIRS" >> $GITHUB_OUTPUT
           exit
         fi
 
         # Default to returning all directories with backends as an array
-        DIRS=$(echo "$BACKEND_DIRS" | jq -nRrc '[inputs|split("\n")] | flatten | tostring')
+        OUTPUT_DIRS=$(echo "$BACKEND_DIRS" | jq -nRrc '[inputs|split("\n")] | flatten | tostring')
 
-        echo "dirs=$DIRS"
-        echo "dirs=$DIRS" >> $GITHUB_OUTPUT
+        echo "dirs=$OUTPUT_DIRS"
+        echo "dirs=$OUTPUT_DIRS" >> $GITHUB_OUTPUT
 
     - name: 'Get Plan Directories'
       if: ${{ inputs.detect_plan_changes == 'true' }}
@@ -84,6 +85,7 @@ runs:
 
         # Get all terraform file directores that contain a backend config
         BACKEND_DIRS=$(find $TERRAFORM_DIRECTORY -name "*.tf" | xargs grep -l 'backend ".*" {' | xargs dirname | sed 's|[\.?][/]*||g' | sort | uniq)
+        echo "BACKEND_DIRS=$BACKEND_DIRS"
 
         HEAD_REF="origin/${{ github.event.pull_request.head.ref }}"
         BASE_REF="origin/${{ github.event.pull_request.base.ref }}"
@@ -91,11 +93,47 @@ runs:
         MODIFIED=$(git diff "$BASE_REF..$HEAD_REF" --name-only | xargs dirname | sort | uniq)
         echo "MODIFIED=$MODIFIED"
 
-        # Get the intersection of directories with backends and modified as an array
-        DIRS=$(comm -12 <(echo "$BACKEND_DIRS") <(echo "$MODIFIED") | jq -nRrc '[inputs|split("\n")] | flatten | tostring')
+        # Placeholder for output directories
+        OUTPUT_DIRS=""
 
-        echo "dirs=$DIRS"
-        echo "dirs=$DIRS" >> $GITHUB_OUTPUT
+        # Loop over all modified directories
+        for MODIFIED_DIR in $MODIFIED; do
+          TEST_DIR=$MODIFIED_DIR
+
+          while true; do
+            # Determine if the test dir has a terraform backend config
+            TARGET_DIR=$(comm -12 <(echo "$BACKEND_DIRS") <(echo "$TEST_DIR"))
+
+            # If no match, use dirname to get parent
+            if [ "$TARGET_DIR" == "" ]; then
+              NEW_DIR=$(dirname $TEST_DIR)
+
+              # If dir didnt change, we hit a root, exit
+              if [ "$NEW_DIR" == "$TEST_DIR" ]; then
+                break
+              fi
+
+              # Update dir and try again
+              TEST_DIR=$NEW_DIR
+              continue
+            fi
+
+            # If we havent added any output directories add it, otherwise join space delimited
+            if [ "$OUTPUT_DIRS" == "" ]; then
+                OUTPUT_DIRS="$TARGET_DIR"
+            else
+                OUTPUT_DIRS="$OUTPUT_DIRS $TARGET_DIR"
+            fi
+
+            break
+          done
+        done
+
+        # Format output dirs for passing into GitHub matrix
+        OUTPUT_DIRS=$(echo "$OUTPUT_DIRS" | tr ' ' '\n' | sort | uniq | jq -nRrc '[inputs|split("\n")] | flatten | tostring')
+
+        echo "dirs=$OUTPUT_DIRS"
+        echo "dirs=$OUTPUT_DIRS" >> $GITHUB_OUTPUT
 
     - name: 'Get Apply Directories'
       if: ${{ inputs.detect_apply_changes == 'true' }}
@@ -108,12 +146,49 @@ runs:
 
         # Get all terraform file directores that contain a backend config
         BACKEND_DIRS=$(find $TERRAFORM_DIRECTORY -name "*.tf" | xargs grep -l 'backend ".*" {' | xargs dirname | sed 's|[\.?][/]*||g' | sort | uniq)
+        echo "BACKEND_DIRS=$BACKEND_DIRS"
 
         MODIFIED=$(git diff HEAD~1 --name-only | xargs dirname | sort | uniq)
         echo "MODIFIED=$MODIFIED"
 
-        # Get the intersection of directories with backends and modified as an array
-        DIRS=$(comm -12 <(echo "$BACKEND_DIRS") <(echo "$MODIFIED") | jq -nRrc '[inputs|split("\n")] | flatten | tostring')
+        # Placeholder for output directories
+        OUTPUT_DIRS=""
 
-        echo "dirs=$DIRS"
-        echo "dirs=$DIRS" >> $GITHUB_OUTPUT
+        # Loop over all modified directories
+        for MODIFIED_DIR in $MODIFIED; do
+          TEST_DIR=$MODIFIED_DIR
+
+          while true; do
+            # Determine if the test dir has a terraform backend config
+            TARGET_DIR=$(comm -12 <(echo "$BACKEND_DIRS") <(echo "$TEST_DIR"))
+
+            # If no match, use dirname to get parent
+            if [ "$TARGET_DIR" == "" ]; then
+              NEW_DIR=$(dirname $TEST_DIR)
+
+              # If dir didnt change, we hit a root, exit
+              if [ "$NEW_DIR" == "$TEST_DIR" ]; then
+                break
+              fi
+
+              # Update dir and try again
+              TEST_DIR=$NEW_DIR
+              continue
+            fi
+
+            # If we havent added any output directories add it, otherwise join space delimited
+            if [ "$OUTPUT_DIRS" == "" ]; then
+                OUTPUT_DIRS="$TARGET_DIR"
+            else
+                OUTPUT_DIRS="$OUTPUT_DIRS $TARGET_DIR"
+            fi
+
+            break
+          done
+        done
+
+        # Format output dirs for passing into GitHub matrix
+        OUTPUT_DIRS=$(echo "$OUTPUT_DIRS" | tr ' ' '\n' | sort | uniq | jq -nRrc '[inputs|split("\n")] | flatten | tostring')
+
+        echo "dirs=$OUTPUT_DIRS"
+        echo "dirs=$OUTPUT_DIRS" >> $GITHUB_OUTPUT
