--- a/.github/workflows/test-apply.yml
+++ b/.github/workflows/test-apply.yml
@@ -15,9 +15,16 @@
 name: 'test_guardian_apply'
 
 on:
-  push:
+  pull_request:
+    types:
+      - 'opened'
+      - 'synchronize'
+      - 'reopened'
     branches:
       - 'main'
+  merge_group:
+    types:
+      - 'checks_requested'
 
 permissions:
   contents: 'read'
@@ -30,6 +37,7 @@ concurrency:
 
 jobs:
   init:
+    if: ${{ github.event_name == 'merge_group' }}
     runs-on: 'ubuntu-latest'
     outputs:
       directories: '${{ steps.dirs.outputs.directories }}'
@@ -46,7 +54,7 @@ jobs:
           detect_apply_changes: 'true'
 
   apply:
-    if: ${{ needs.init.outputs.directories != '[]' }}
+    if: ${{ github.event_name == 'merge_group' && needs.init.outputs.directories != '[]' }}
     needs:
       - 'init'
     runs-on: 'ubuntu-latest'
@@ -86,3 +94,25 @@ jobs:
           working_directory: '${{ matrix.working_directory }}'
           bucket_name: '${{ vars.GUARDIAN_BUCKET_NAME }}'
           terraform_version: '1.3.6'
+
+  apply_success:
+    if: ${{ github.event_name == 'merge_group' && always() }}
+    runs-on: 'ubuntu-latest'
+    needs:
+      - 'init'
+      - 'apply'
+    steps:
+      - name: 'Checkout'
+        uses: 'actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c' # ratchet:actions/checkout@v3
+
+      - name: 'Force Failure for Testing'
+        shell: 'bash'
+        run: |-
+          echo "Failure....."
+          exit 1
+
+      - name: 'Guardian Post Apply Status'
+        uses: './.github/actions/plan-status'
+        with:
+          init_result: '${{ needs.init.result }}'
+          plan_result: '${{ needs.apply.result }}'
