--- a/examples/guardian-admin.yml
+++ b/examples/guardian-admin.yml
@@ -13,7 +13,7 @@
 # limitations under the License.
 
 name: 'guardian_admin'
-run-name: 'guardian_admin - [${{ inputs.command }}] [${{ inputs.directories }}]'
+run-name: 'guardian_admin - [${{ inputs.command }}] [${{ inputs.directories }}] [${{ inputs.terraform_init }}]'
 
 on:
   workflow_dispatch:
