--- a/.github/workflows/iam-drift-detection.yml
+++ b/.github/workflows/iam-drift-detection.yml
@@ -59,7 +59,7 @@ jobs:
         # TODO: Use actions/github-script to create this issue instead of a third-party library.
         uses: 'imjohnbo/issue-bot@3d96848fb5e9a4a473bb81ae62b4b4866a56e93a'
         env:
-          GITHUB_TOKEN: ${{ secrets.token }}
+          GITHUB_TOKEN: '${{ secrets.token }}'
         with:
           assignees: ''
           labels: 'IAM drift'
