--- a/.github/workflows/test-iam-drift-detection.yml
+++ b/.github/workflows/test-iam-drift-detection.yml
@@ -1,3 +1,17 @@
+# Copyright 2023 Google LLC
+#
+# Licensed under the Apache License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+#
+#     http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+
 # Workflow for IAM drift detection
 # Approach:
 #   Run on schedule or manual
@@ -32,7 +46,7 @@ jobs:
           workload_identity_provider: '${{ vars.GUARDIAN_WIF_PROVIDER }}'
           service_account: '${{ vars.GUARDIAN_WIF_SERVICE_ACCOUNT }}'
 
-      - name: 'Guardian Apply'
+      - name: 'Guardian IAM Drift Detection'
         uses: './.github/actions/iam-drift-detection'
         env:
           GITHUB_TOKEN: '${{ secrets.GITHUB_TOKEN }}'
