--- a/.github/actions/iam-drift-detection/action.yml
+++ b/.github/actions/iam-drift-detection/action.yml
@@ -51,7 +51,8 @@ runs:
         GCS_BUCKET_LABEL: '${{ inputs.gcs_bucket_label }}'
       run: |
         diff_snippet="$(.guardian/iam-drift-detection/detect_drift.sh "$ORGANIZATION_ID" "$GCS_BUCKET_LABEL")"
-        if [[ $diff_snippet != "" ]]; then; diff_detected="TRUE"; else; diff_detected="FALSE"; fi
+        echo "Got Diff: ${diff_snippet}"
+        if [[ "${diff_snippet}" != "" ]]; then; diff_detected="TRUE"; else; diff_detected="FALSE"; fi
 
         echo "diff_detected=${diff_detected}" >> "$GITHUB_OUTPUT"
         echo "diff_snippet<<EOF" >> $GITHUB_ENV
